@@ -58,6 +58,8 @@ public class LocalDataSource extends BasicDataSource {
 		setTimeBetweenEvictionRunsMillis(Environment.getIntValue(Environment.PROP_DBCP_TIME_BETWEEN_EVICTION_RUNS) * 1000);
 		setNumTestsPerEvictionRun(Environment.getIntValue(Environment.PROP_DBCP_NUM_TESTS_PER_EVICTION_RUN));
 		setValidationQuery(WikiDatabase.getConnectionValidationQuery());
+		setPoolPreparedStatements(Environment.getBooleanValue(Environment.PROP_DBCP_POOL_PREPARED_STATEMENTS));
+		setMaxOpenPreparedStatements(Environment.getIntValue(Environment.PROP_DBCP_MAX_OPEN_PREPARED_STATEMENTS));
 		if (Environment.getValue(Environment.PROP_DB_TYPE).equals(DataHandler.DATA_HANDLER_ORACLE)) {
 			// handle clobs as strings, Oracle 10g and higher drivers (ojdbc14.jar)
 			addConnectionProperty("SetBigStringTryClob", "true");
