@@ -137,9 +137,11 @@ admin.persistence.caption=Persistence
 admin.persistence.caption.driver=JDBC driver class
 admin.persistence.caption.maxactive=Max number of active connections
 admin.persistence.caption.maxidle=Max number of idle connections
+admin.persistence.caption.maxopenpreparedstatements=Max number of open prepared statements
 admin.persistence.caption.minevictableidletime=Min idle eviction time
 admin.persistence.caption.numtestsperevictionrun=Number of tests per eviction run
 admin.persistence.caption.pass=Database Password
+admin.persistence.caption.poolpreparedstatements=Pool prepared statements
 admin.persistence.caption.testonborrow=Test connections on borrow
 admin.persistence.caption.testonreturn=Test connections on return
 admin.persistence.caption.testwhileidle=Test idle connections
@@ -152,6 +154,7 @@ admin.persistence.caption.whenexhaustedaction.block=Block
 admin.persistence.caption.whenexhaustedaction.fail=Fail
 admin.persistence.caption.whenexhaustedaction.grow=Grow
 admin.persistence.help.minevictableidletime=Minimum idle time (in seconds) before evicting idle connections from the connection pool.
+admin.persistence.help.maxopenpreparedstatements=This parameter only has an effect when prepared statements are pooled.  A larger value may improve performance but will use more system resources and could cause a database connection to run out of cursors.  Any non-positive number will allow unlimited pooled prepared statements.
 admin.persistencetype.database=External Database
 admin.persistencetype.internal=Internal Database
 admin.rss.caption.allowed=Provide RSS feed
